--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "puppeteer": "^19.7.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "jsdom": "^21.1.1",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0",
+    "vite": "^4.2.1",
     "vitest": "^0.29.7"
   }
 }
