--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "jsdom": "^21.1.1",
+    "react-error-overlay": "^6.0.9",
     "typescript": "^4.9.3",
     "vite": "^4.2.1",
     "vitest": "^0.29.7"
