--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
+    "lodash": "^4.17.21",
     "puppeteer": "^19.7.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
