--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "puppeteer": "^19.7.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/ws": "^8.5.5",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "jsdom": "^21.1.1",
     "react-error-overlay": "^6.0.9",
