--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/lodash": "^4.14.191",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
+    "axios-mock-adapter": "^1.21.5",
     "lodash": "^4.17.21",
     "puppeteer": "^19.7.5",
     "react": "^18.2.0",
